# tasker

./: .gitignore  Cargo.toml  tasker_data.json
layouts/: main.glade~
src/: data.rs  gui.rs  main.rs
