[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
serde_json = "1.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]

[dependencies.serde]
version = "1.0"
features = ["derive"]